# gym

./: .gitignore  Cargo.toml  README.md  build.rs  deploy.sh  gen.sh  install.sh  up.sql  upd.sh
act/: Cargo.toml  build.rs
act/sh/all/: commit.sh  list_new_files.sh  pull.sh  upd.sh
act/src/: lib.rs
s/: index.html  main.css  main.js  main.ts  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
src/: ctx.rs  db.rs  food.rs  main.rs  util.rs
