[package]
name = "gym"
version = "0.1.0"
edition = "2021"

[dependencies]
act = { version = "0.1.0", path = "act" }
chrono = "0.4.38"
csv = "1.3.0"
fpr-cli = "0.1.8"
fpr-cli-derives = "0.1.8"
inquire = "0.7.5"
itertools = "0.13.0"
regex = "1.11.0"
serde = "1.0.211"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["sqlite"] }
tokio = { version = "1.41.0", features = ["full"] }
warp = "0.3.7"
